--- a/templates/home.html
+++ b/templates/home.html
@@ -5843,7 +5843,7 @@
 
 
  <a href="/remove-background" target="_blank">Background Remover</a>
-                <a href="https://chatezzy.com" target="_blank">Multi AI Chat</a>
+                <a href="https://chatezzy.com" target="_blank">All in one AI ⚡</a>
                 <a href="/pricing" target="_blank">Pricing</a>
 
 	            <a id="bugReportBtn" >Report Bug</a>
