--- a/templates/home.html
+++ b/templates/home.html
@@ -7295,6 +7295,8 @@
     border-radius: 6px;
     color: #78350f;
 }*/
+
+
     </style>
 </head>
 <body>
@@ -7609,8 +7611,10 @@
         <nav class="site-nav">
             <!-- Tools Dropdown -->
             <div class="nav-item" id="toolsNav">
-                <button class="nav-link" onclick="toggleToolsDropdown(event)">
-				    <span>Features 🔥</span>  <!-- CHANGE THIS TEXT -->
+        
+
+				<button class="nav-link" onclick="toggleToolsDropdown(event)" style="font-size: 15px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;">
+				    Features🔥
 				    <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 				        <polyline points="6 9 12 15 18 9"></polyline>
 				    </svg>
